# cim-compose

./: Cargo.toml  flake.nix  readme.md
examples/: compose_domains.rs  domain_composition.rs  entity_links.rs
src/: base_types.rs  composition.rs  domain_compositions.rs  lib.rs  mapping.rs
tests/infrastructure/: test_event_stream.rs  test_message_routing.rs  test_nats_connection.rs
