[package]
name = "cim-compose"
version = "0.1.0"
edition = "2021"
authors = ["The Cowboy AI"]
description = "A standalone graph composition library based on category theory"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thecowboyai/alchemist"
keywords = ["graph", "composition", "category-theory", "domain-modeling"]
categories = ["data-structures", "algorithms"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.11", features = ["v4", "serde"] }

[dev-dependencies]
pretty_assertions = "1.4"
